[tool.poetry]
name = "lepsen-core"
version = "0.2.0rc2"
packages = [{ include = "lepsen/core/*" }]
description = "Minecraft data pack utility library."
authors = ["Lue <lue@lued.me>"]
readme = "README.md"
license = "0BSD"
homepage = "https://github.com/Luexa/lepsen-core"
repository = "https://github.com/Luexa/lepsen-core"
classifiers = [
    "License :: OSI Approved",
    "License :: Freely Distributable",
]

[tool.poetry.dependencies]
python = "^3.9"
beet = "^0.50.3"
lectern = "^0.18.2"
mecha = "^0.34.0"

[tool.poetry.dev-dependencies]
black = { version = "^21.12b0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
