[tool.poetry]
name = "lepsen-core"
version = "0.3.0b1"
packages = [{ include = "lepsen/core/*" }]
description = "Minecraft data pack utility library."
authors = ["Lue <lue@lued.me>"]
readme = "README.md"
license = "0BSD"
homepage = "https://github.com/Luexa/lepsen-core"
repository = "https://github.com/Luexa/lepsen-core"
classifiers = [
    "License :: OSI Approved",
    "License :: Freely Distributable",
]

[tool.poetry.dependencies]
python = "^3.10"
beet = "^0.84.0"
lectern = "^0.26.0"
mecha = "^0.67.0"
nbtlib = "^1.12.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
